# nfl-playoff-challenge-api

./: Dockerfile  README.md  app.py  app_local_json.py  docker-compose.yml  heroku.yml  image_locations.py  pyproject.toml  requirements.txt  scrape.py
.github/workflows/: linttest.yaml  tests.yaml
scripts/: constants.py  scrape.py  test_scrape.py
scripts/samples/: sample_entry.html
service/: app.py
service/scripts/: constants.py  scrape.py
tests/: run_tests.sh  test_scrape.py
