[tool.poetry]
name = "nfl-playoff-challenge-api"
version = "0.1.0"
description = ""
authors = ["Jon Solow"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
Flask-Cors = "^3.0.9"
gunicorn = "^20.0.4"
html5lib = "^1.1"
Jinja2 = "^2.11.2"
jsonschema = "^3.2.0"
lxml = "^4.6.2"
numpy = "^1.19.4"
pandas = "^1.2.0"
requests = "^2.25.1"
urllib3 = "^1.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
